<resources>
    <string name="app_name">Note It</string>
    <string name="notes">Notes</string>
    <string name="note_it">note it !</string>
    <string name="create_new_note">Create new note !</string>
    <string name="search_for_notes">Search for notes</string>
    <string name="provide_app_info">Provide App Info</string>
    <string name="empty_home_image">Empty Home Image</string>
    <string name="create_your_first_note">Create your first note !</string>
    <string name="title">Title</string>
    <string name="type_something">Type Something…</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="warning">Warning !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_note_hint">Search by the keyword...</string>
    <string name="note_not_found_try_searching_again">Note not found. Try Searching again</string>
</resources>