<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@color/black_1">

    <TextView
        android:id="@+id/fragment_empty_tv_title"
        android:layout_width="@dimen/dp_115"
        android:layout_height="@dimen/dp_59"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_43"
        android:layout_marginTop="@dimen/dp_47"
        android:layout_marginStart="@dimen/dp_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/searchBtn"
        android:src="@drawable/ic_search"
        android:background="@android:color/transparent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_268"
        android:layout_marginTop="@dimen/dp_51"
        android:contentDescription="@string/search_for_notes" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/infoBtn"
        android:src="@drawable/ic_info"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_339"
        android:layout_marginTop="@dimen/dp_51"
        android:contentDescription="@string/provide_app_info" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_empty_iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fragment_empty_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/empty_home_image" />

    <TextView
        android:id="@+id/fragment_empty_tv_create_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/create_your_first_note"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/fragment_empty_iv_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_6.27"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        app:fabCustomSize="@dimen/dp_70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/dp_35"
        android:layout_marginBottom="@dimen/dp_49"
        android:foreground="@drawable/ic_btn_add"
        android:foregroundGravity="center"
        android:contentDescription="@string/create_new_note"
         />

</androidx.constraintlayout.widget.ConstraintLayout>