<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_black"
    >


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_home_tv_title"
        android:layout_width="@dimen/dp_115"
        android:layout_height="@dimen/dp_59"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_47"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/fragment_home_searchBtn"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dp_268"
        android:layout_marginTop="@dimen/dp_51"
        android:background="@android:color/transparent"
        android:contentDescription="@string/search_for_notes"
        android:src="@drawable/ic_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/fragment_home_infoBtn"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dp_339"
        android:layout_marginTop="@dimen/dp_51"
        android:contentDescription="@string/provide_app_info"
        android:src="@drawable/ic_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_home_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty_home_image"
        android:src="@mipmap/fragment_empty_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_home_tv_create_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_6.27"
        android:text="@string/create_your_first_note"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_iv" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_home_fab_btn"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginEnd="@dimen/dp_35"
        android:layout_marginBottom="@dimen/dp_49"
        android:contentDescription="@string/create_new_note"
        android:foreground="@drawable/ic_btn_add"
        android:foregroundGravity="center"
        app:fabCustomSize="@dimen/dp_70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_home_screen_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="143dp"
        tools:listitem="@layout/single_note_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
