<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_42"
        android:background="@drawable/dialog_shape"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_custom_dialog_tv_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/warning"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_23"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_custom_dialog_btn_negative"
            android:layout_width="@dimen/dp_112"
            android:layout_height="@dimen/dp_39"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp_159"
            android:layout_marginStart="@dimen/dp_38"
            android:layout_marginEnd="210dp"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@drawable/dialog_negative_button_shape"
            android:text="@string/negative"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_custom_dialog_btn_positive"
            android:layout_width="@dimen/dp_112"
            android:layout_height="@dimen/dp_39"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_159"
            android:layout_marginEnd="@dimen/dp_33"
            android:layout_marginStart="@dimen/dp_210"
            android:background="@drawable/dialog_positive_button_shape"
            android:text="@string/positive"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_custom_dialog_iv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/fragment_custom_dialog_tv_alert"
            android:src="@drawable/ic_dialog_info_btn"
            android:layout_marginTop="@dimen/dp_31.6"
            android:layout_marginBottom="@dimen/dp_162.6"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>